Changelog for MinifyX

1.3.0-beta (26.12.2013)
==============
- Refactored main class.

1.2.2-pl3 (16.12.2013)
==============
- Removed phar file.
- Fixed url of cache dir in subfolder installations.
- Ability of commenting files by prefixing them by the dash.

1.2.1-pl (03.12.2013)
==============
- [#1] Replaced constant DIRECTORY_SEPARATOR to '/'.

1.2.0-pl (23.11.2013)
==============
- Fixed clean of parameter &cacheFolder

1.2.0-rc (20.11.2013)
==============
- Updated leafo/lessphp to v0.4.0
- Updated leafo/scssphp to v0.0.8
- Improved error logging

1.2.0-beta (12.11.2013)
==============
- Integrated Munee library from http://mun.ee
- Auto creation of cache dir.
- More options to register files on frontend.

1.1.3 (07.01.2013)
==============
- absolute path in the URL attribute of all compressed files.

1.1.2 (11.09.2012)
==============
- Improved caching of minified files.

1.1.1 (10.09.2012)
==============
- Removed E_WARNING on line 94 of minifyx.class.php

1.1.0 (09.09.2012)
==============
- Changed css minifier to Minify_CSS_Compressor from https://code.google.com/p/minify/
- Added Douglas Crockford's JSMin https://github.com/rgrove/jsmin-php/ 
- Serious refactor of code
- Added properties to snippet
- Removed plugin
- Improved caching of files
- Added parameters jsFilename && cssFilename


1.0.0
==============
- Initial Version